Added a map which shows local gigs location and made the code more interactive

--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
         apiHost: 'https://api-cf-ap-8.sendbird.com',
       });
       </script>
-  </body>
+      <!-- <script
+      async
+      defer
+      src={`https://maps.googleapis.com/maps/api/js?key=${process.env.REACT_APP_GOOGLE_MAPS_API_KEY}&libraries=places`}
+    ></script> -->
+    
+    </body>
 </html>
